Deleted fonts from git

--- a/index.html
+++ b/index.html
@@ -6,7 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Document</title>
+    <title>Discover Amazing places in Japan</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="wrapper">
+
+        <div class="header__wrapper">
+        <div class="header__logo">
+          <a href="/" class="header__logo-link">
+            <img src="/img/svg/logo.svg" alt="logo" class="header__logo-pic" />
+          </a>
+        </div>
+
+
+          <nav class="header__nav">
+            <ul class="header__list">
+              <li class="header__item">
+                <a href="#" class="header__link">articles</a>
+              </li>
+            <ul class="header__list">
+              <li class="header__item">
+                <a href="#" class="header__link">locations</a>
+              </li>
+            <ul class="header__list">
+                <li class="header__item">
+                <a href="#" class="header__link">videos</a>
+                </li>
+            <ul class="header__list">
+                <li class="header__item">
+                <a href="#" class="header__link">sign in</a>
+                </li>
+            </ul>
+          </nav>
+        </div>
+      <!-- /header_wrapper -->
+      </div>
+<!-- /wrapper -->
+    </header>
+
+    <main class="main">
+      <section class="intro">
+        
+      </section>
+    </main>
+  </body>
 </html>
