--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Discover Amazing places in Japan</title>
   </head>
   <body>
+    <!-- Header start -->
     <header class="header">
       <div class="wrapper">
 
@@ -44,8 +45,10 @@
       </div>
 <!-- /wrapper -->
     </header>
+    <!-- header end -->
 
     <main class="main">
+      <!-- Intro start -->
       <section class="intro">
         <div class="wrapper">
           <h1 class="intro__title">Discover Amazing places in Japan</h1>
@@ -61,6 +64,41 @@
           </form>
         </div>
       </section>
+      <!-- Intro end -->
+
+      <!-- Benefits Start -->
+      <section class="benefits">
+        <div class="benefits__wrap">
+          <h2 class="benefits__title">Benefits of Odigo</h2>
+          <div class="benefits__cards">
+            <div class="benefits__card">
+              <div class="benefits__card-pic">
+                <img src="/img/svg/temple.svg" alt="temple" class="benefits__card-thumb">
+              </div>
+              <h3 class="benefits__card-title">Welcome to Odigo!</h3>
+              <p class="benefits__card-desc">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
+              <a href="#" class="benefits__card-link">learn more</a>
+            </div>
+            <div class="benefits__card">
+              <div class="benefits__card-pic">
+                <img src="/img/svg/person.svg" alt="person" class="benefits__card-thumb">
+              </div>
+              <h3 class="benefits__card-title">Your Personal Japan Guide</h3>
+              <p class="benefits__card-desc">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
+              <a href="#" class="benefits__card-link">learn more</a>
+            </div>
+            <div class="benefits__card">
+              <div class="benefits__card-pic">
+                <img src="/img/svg/shop.svg" alt="shop" class="benefits__card-thumb">
+              </div>
+              <h3 class="benefits__card-title">Promoting Local Businesses</h3>
+              <p class="benefits__card-desc">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
+              <a href="#" class="benefits__card-link">learn more</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Benefits end -->
     </main>
   </body>
 </html>
