Add places block

--- a/index.html
+++ b/index.html
@@ -99,6 +99,51 @@
         </div>
       </section>
       <!-- Benefits end -->
+
+      <!-- Places start -->
+
+      <section class="places">
+        <div class="wrapper-full">
+          <div class="places__caption">
+            <h2 class="places__title section-title">Get inspired for your next trip</h2>
+            <a href="#" class="places__link">view all</a>
+          </div>
+
+          <div class="places__cards">
+
+            <figure class="places__card places__card_size_lg">
+              <img src="/img/place-1.jpg" alt="mount fuji" class="places__card-pic places__card-pic_size_lg">
+              <figcaption class="places__card_title">Mount Fuji</figcaption>
+              <a href="#" class="places__card-link"></a>
+            </figure>
+            <figure class="places__card places__card_size_lg">
+              <img src="/img/place-2.jpg" alt="kyoto" class="places__card-pic places__card-pic_size_lg">
+              <figcaption class="places__card_title">Kyoto</figcaption>
+              <a href="#" class="places__card-link"></a>
+            </figure>
+            <figure class="places__card places__card_size_sm">
+              <img src="/img/place-3.jpg" alt="tokyo" class="places__card-pic places__card-pic_size_sm">
+              <figcaption class="places__card_title">Tokyo</figcaption>
+              <a href="#" class="places__card-link"></a>
+            </figure>
+            <figure class="places__card places__card_size_sm">
+              <img src="/img/place-4.jpg" alt="niigata" class="places__card-pic places__card-pic_size_sm">
+              <figcaption class="places__card_title">Niigata</figcaption>
+              <a href="#" class="places__card-link"></a>
+            </figure>
+            <figure class="places__card places__card_size_sm">
+              <img src="/img/place-5.jpg" alt="sapporo" class="places__card-pic places__card-pic_size_sm">
+              <figcaption class="places__card_title">Sapporo</figcaption>
+              <a href="#" class="places__card-link"></a>
+            </figure>
+
+          </div>
+        </div>
+      </section>
+
+
+
+      <!-- Places End -->
     </main>
   </body>
 </html>
